--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"
     <title>Missão Projeto Inteligência Artificial</title>
 </head>
 <body>
@@ -10,7 +11,9 @@
         <h1 class="título">Missão Projeto Inteligência Artificial</h1>
         <div class="caixa-pergunta"></div>
         <div class="caixa-alterntiva"></div>
+        <div class="caixa-resultado">
         <p class="texto-resultado"></p>
+    </div>
     </div>
 </body>
 </html>
